добавил доп функционал для дизеринга